<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android">
    <group
            android:id="@+id/nav_group_main"
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_colorsecondary_32dp"
                android:title="@string/Profile" />
        <item
                android:id="@+id/nav_feed"
                android:icon="@drawable/ic_home_colorsecondary_32dp"
                android:title="@string/Feed"
        />
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_colorsecondary_32dp"
                android:title="@string/Settings" />
    </group>

    <group android:id="@+id/nav_group_logout">
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_colorerror_32dp"
                android:title="@string/LogOut"/>
    </group>
</menu>