<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/profile_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screens.profile.ProfileFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/profile_photo"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    android:src="@drawable/material"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                        tools:src="@tools:sample/avatars"/>

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="24sp"
                    android:padding="16dp"
                    tools:text="@tools:sample/full_names"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
                <TextView
                    android:id="@+id/profile_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    tools:text="Age: 21"/>
                <TextView
                    android:id="@+id/profile_posts_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    tools:text="Posts: 10"/>
                <TextView
                    android:id="@+id/profile_average_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    tools:text="Rating: 4.5"/>
            </LinearLayout>

            <Button
                android:id="@+id/profile_edit"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Edit"
                style="@style/CustomButton"/>

            <FrameLayout
                android:id="@+id/edit_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="4dp"
                android:background="@color/colorSecondary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="8dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/profile_posts_title"/>

            <TextView
                    android:id="@+id/hint_no_posts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorHint"
                    android:textAlignment="center"
                    android:text="@string/small_posts_empty"
                    android:visibility="gone"
                    tools:visibility="visible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profile_posts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingTop="@dimen/item_post_margin"
                    tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:spanCount="2"
                    tools:listitem="@layout/item_post_small"
                    tools:itemCount="3" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>